--- a/Android/BlunoBasicDemo/app/src/main/res/layout/activity_main.xml
+++ b/Android/BlunoBasicDemo/app/src/main/res/layout/activity_main.xml
@@ -2,75 +2,111 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity"
     android:focusable="true"
-    android:focusableInTouchMode="true">
-
-    <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/scrollView"
-        android:layout_below="@+id/editText2"
-        android:layout_alignStart="@+id/editText2"
-        android:layout_alignParentBottom="true"
-        android:layout_alignEnd="@+id/serialSendText">
-
-        <TextView
-            android:id="@+id/serialReveicedText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:textSize="10sp"
-            android:layout_below="@+id/editText2"
-            android:layout_alignStart="@+id/editText2"
-            android:layout_alignEnd="@+id/serialSendText"
-            android:layout_alignParentBottom="true" />
-    </ScrollView>
+    android:focusableInTouchMode="true"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:visibility="visible"
+    tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/buttonSerialSend"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/serialSendText"
-        android:layout_alignRight="@+id/serialSendText"
-        android:text="Send Data" />
-
-    <TextView
-        android:id="@+id/editText2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/serialSendText"
-        android:layout_below="@+id/serialSendText"
-        android:layout_marginTop="20dp"
-        android:ems="10"
-        android:text="Received Data:"
-        android:textSize="25sp" />
-
-    <EditText
-        android:id="@+id/serialSendText"
-        android:layout_width="310dp"
-        android:layout_height="40dp"
-        android:layout_below="@+id/buttonScan"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="22dp"
-        android:background="#555555"
-        android:bufferType="editable"
-        android:ems="10"
-        android:inputType="text"
-        android:text="Data sending Area"
-        android:textColor="#999999"
-        android:textSize="20dip" />
+        android:id="@+id/stop"
+        android:layout_width="198dp"
+        android:layout_height="65dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="246dp"
+        android:layout_marginEnd="93dp"
+        android:layout_marginBottom="404dp"
+        android:text="Stop Collecting"
+        android:visibility="invisible" />
 
     <Button
         android:id="@+id/buttonScan"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="101dp"
+        android:layout_height="67dp"
         android:layout_alignLeft="@+id/serialSendText"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="294dp"
+        android:layout_marginBottom="648dp"
         android:text="Scan" />
+
+    <Button
+        android:id="@+id/start_day"
+        android:layout_width="168dp"
+        android:layout_height="73dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="114dp"
+        android:layout_marginTop="287dp"
+        android:layout_marginEnd="113dp"
+        android:layout_marginBottom="355dp"
+        android:text="Collect Awake" />
+
+    <Button
+        android:id="@+id/start_night"
+        android:layout_width="148dp"
+        android:layout_height="69dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="121dp"
+        android:layout_marginTop="192dp"
+        android:layout_marginEnd="126dp"
+        android:layout_marginBottom="454dp"
+        android:text="Collect Sleep" />
+
+    <Button
+        android:id="@+id/calibrate"
+        android:layout_width="156dp"
+        android:layout_height="75dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="118dp"
+        android:layout_marginTop="418dp"
+        android:layout_marginEnd="121dp"
+        android:layout_marginBottom="222dp"
+        android:text="Calibrate" />
+
+    <TextView
+        android:id="@+id/calibrate_data"
+        android:layout_width="127dp"
+        android:layout_height="44dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="144dp"
+        android:layout_marginTop="512dp"
+        android:layout_marginEnd="124dp"
+        android:layout_marginBottom="159dp"
+        android:text="N/A"
+        tools:visibility="invisible" />
+
+    <Button
+        android:id="@+id/vibrate"
+        android:layout_width="141dp"
+        android:layout_height="78dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="122dp"
+        android:layout_marginTop="562dp"
+        android:layout_marginEnd="132dp"
+        android:layout_marginBottom="75dp"
+        android:text="Vibrate" />
 
 </RelativeLayout>
